# todo_list_manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  command.cpp  command.h  logger.cpp  logger.h  main.cpp  pch.h  task.cpp  task.h  task_manager.cpp  task_manager.h
